--- a/frontend/todo-frontend/public/manifest.json
+++ b/frontend/todo-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "VocaList",
-  "name": "Create React App Sample",
+  "name": "VocaList",
   "icons": [
     {
       "src": "favicon.ico",
