--- a/frontend/todo-frontend/package.json
+++ b/frontend/todo-frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "recorder-js": "^1.0.7",
